--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@ and open the template in the editor.
             <div class="video-overlay">
                 <video class="video-overlay__video" autoplay loop muted playsinline>
                     <source src="public/video/background-vid.mp4" type="video/mp4">
+                    <source src="public/video/background-vid.webm" type="video/webm">
+                    <source src="public/video/background-vid.ogv" type="video/ogv">
                 </video> 
             </div>
             <div id="textslider" class="textslider">
