--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ and open the template in the editor.
         </header>
         <main class="main">
             <div class="video-overlay">
-                <video class="video-overlay__video" autoplay loop muted playsinline>
+                <video preload loop muted class="video-overlay__video" autoplay>
                     <source src="public/video/background-vid.mp4" type="video/mp4">
                     <source src="public/video/background-vid.webm" type="video/webm">
                     <source src="public/video/background-vid.ogv" type="video/ogv">
