Add contact to home page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ and open the template in the editor.
                     <source src="public/video/background-vid.mp4" type="video/mp4">
                     <source src="public/video/background-vid.webm" type="video/webm">
                     <source src="public/video/background-vid.ogv" type="video/ogv">
-                </video> 
+                </video>
             </div>
             <div id="textslider" class="textslider">
                 <textslider-slide v-for="(slide, index) in slides"
@@ -58,6 +58,12 @@ and open the template in the editor.
                                          >
                     </textslider-controll>
                 </div>
+                <a href="#" class="textslider__contact textslider__contacts--mail">
+                    info@5pagency.cz
+                </a>
+                <a href="#" class="textslider__contact textslider__contacts--tel">
+                    +420 545 425 241
+                </a>
             </div>
 
         </main>
